[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termdown"
version = "2.0.0"
description = "Countdown timer for your terminal"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Torsten Rehn", email = "torsten@rehn.email" },
]
keywords = [
    "console",
    "countdown",
    "curses",
    "stopwatch",
    "terminal",
    "timer",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console :: Curses",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "art",
    "Pillow",
    "python-dateutil",
    "windows-curses; platform_system == 'Windows'",
]

[project.scripts]
termdown = "termdown.cli:main"

[project.urls]
Homepage = "https://github.com/trehn/termdown"
Repository = "https://github.com/trehn/termdown"
Changelog = "https://github.com/trehn/termdown/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
exclude = [
    "uv.lock",
    "*.gif",
]
